2012-09-03  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: Remove descriptive info from help target, just list the
	available targets. Output tends to be poorly formatted and cluttered
	otherwise.
	(VCE-static): Add VC++ static build target.
	(VCE-small-static): Likewise.
	(VCE-small-static-debug): Likewise.
	(VCE-small-static-debug): Likewise.

2012-09-02  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* All: correct spelling to 'cancellation'.

2012-08-31  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* pthread_attr_getschedpolicy.c: Remove pedantic arg check.
	* pthread_getschedparam.c: Likewise.
	* pthread_mutex_timelock.c: Restructure to address unreached final
	return statement.

2012-08-31  Daniel Richard. G <danielg at teragram dot com>

	* implement.h (INLINE): only define if building the inlined make targets. G++
	complained about undefined reference to ptw32_robust_mutex_remove() because it
	appears in separate compilation units for "make GCE".

2012-08-29  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* ptw32_MCS_lock.c (ptw32_mcs_flag_wait): Fix cast in first 'if' statement.
	* pthread_mutex_consistent.c (comment): Fix awkward grammar.
	* pthread_mutexattr_init.c: Initialize robustness element.

2012-08-29  Daniel Richard. G <danielg at teragram dot com>

	* implement.h (PTW32_INTERLOCKED_SIZE): Define as long or LONGLONG.
	(PTW32_INTERLOCKED_SIZEPTR): Define as long* or LONGLONG*.
	* pthread_attr_getschedpolicy.c (SCHED_MAX): Fix cast.
	* ptw32_mutex_check_need_init.c: Fix static mutexattr_t struct initializations.
	* ptw32_threadStart.c (ExceptionFilter): Add cast.
	* ptw32_throw.c: Add cast.

2012-08-18  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* pthread_timedjoin_np.c: New non-portable function.
	* common.mk (pthread_timedjoin_np): Add new function.
	* nonportable.c (pthread_timedjoin_np): Likewise.

2012-08-16  Daniel Richard. G <danielg at teragram dot com>
