@@ -39,8 +39,8 @@ CFLAGSD	= /Z7 $(XCFLAGS)
 CLEANUP	= __CLEANUP_C
 
 # C++ Exceptions
-VCEFLAGS	= /EHsc /TP $(CPPFLAGS) $(CFLAGS)
-VCEFLAGSD	= /EHsc /TP $(CPPFLAGS) $(CFLAGSD)
+VCEFLAGS	= /EHs /TP $(CPPFLAGS) $(CFLAGS)
+VCEFLAGSD	= /EHs /TP $(CPPFLAGS) $(CFLAGSD)
 #Structured Exceptions
 VSEFLAGS	= $(CPPFLAGS) $(CFLAGS)
 VSEFLAGSD	= $(CPPFLAGS) $(CFLAGSD)
